recursion.logo.square.FourSquare.scala.code
override def run() {
  for (x<-0 to 3) {
    avance(100.)
    droite(90.)}}